--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="At Expert Technical Services, we are a trusted partner in the construction industry, offering specialized technical services designed to elevate the quality, efficiency, and safety of construction projects. With years of experience and a deep understanding of the unique
+      challenges in construction, we provide innovative, reliable, and sustainable solutions that help 
+      our clients achieve successful project outcomes on time and within budget."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/croplogo.png" />
     <!--
@@ -24,13 +26,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Home services</title>
+    <title>Expert Technical Services</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
